--- a/rt-ac58u.config
+++ b/rt-ac58u.config
@@ -3690,10 +3690,10 @@ CONFIG_PACKAGE_iptables=y
 # CONFIG_PACKAGE_htpdate is not set
 # CONFIG_PACKAGE_linuxptp is not set
 # CONFIG_PACKAGE_ntp-keygen is not set
-CONFIG_PACKAGE_ntp-utils=y
-CONFIG_PACKAGE_ntpclient=y
-CONFIG_PACKAGE_ntpd=y
-CONFIG_PACKAGE_ntpdate=y
+# CONFIG_PACKAGE_ntp-utils is not set
+# CONFIG_PACKAGE_ntpclient is not set
+# CONFIG_PACKAGE_ntpd is not set
+# CONFIG_PACKAGE_ntpdate is not set
 
 #
 # VPN
