--- a/rt-ac58u.config
+++ b/rt-ac58u.config
@@ -2069,7 +2069,7 @@ CONFIG_PACKAGE_kmod-usb-ohci=y
 # CONFIG_PACKAGE_kmod-usb-ohci-pci is not set
 CONFIG_PACKAGE_kmod-usb-phy-qcom-dwc3=y
 CONFIG_PACKAGE_kmod-usb-phy-qcom-ipq4019=y
-# CONFIG_PACKAGE_kmod-usb-printer is not set
+CONFIG_PACKAGE_kmod-usb-printer=m
 CONFIG_PACKAGE_kmod-usb-serial=m
 CONFIG_PACKAGE_kmod-usb-serial-ark3116=m
 CONFIG_PACKAGE_kmod-usb-serial-belkin=m
