restore ac58 image (fix typo)

--- a/rt-ac58u.config
+++ b/rt-ac58u.config
@@ -45,8 +45,9 @@ CONFIG_TARGET_ipq806x=y
 # CONFIG_TARGET_zynq is not set
 # CONFIG_TARGET_x86 is not set
 # CONFIG_TARGET_MULTI_PROFILE is not set
-CONFIG_TARGET_ipq806x_Default=y
+# CONFIG_TARGET_ipq806x_Default is not set
 # CONFIG_TARGET_ipq806x_DEVICE_FRITZ4040 is not set
+CONFIG_TARGET_ipq806x_DEVICE_RT-AC58U=y
 # CONFIG_TARGET_ipq806x_DEVICE_EA8500 is not set
 # CONFIG_TARGET_ipq806x_DEVICE_D7800 is not set
 # CONFIG_TARGET_ipq806x_DEVICE_R7500 is not set
@@ -63,14 +64,11 @@ CONFIG_TARGET_ipq806x_Default=y
 CONFIG_HAS_DEVICES=y
 CONFIG_TARGET_BOARD="ipq806x"
 CONFIG_TARGET_SUBTARGET="generic"
-CONFIG_TARGET_PROFILE="Default"
+CONFIG_TARGET_PROFILE="DEVICE_RT-AC58U"
 CONFIG_TARGET_ARCH_PACKAGES="arm_cortex-a15_neon-vfpv4"
 CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mcpu=cortex-a15 -mfpu=neon-vfpv4"
 CONFIG_CPU_TYPE="cortex-a15+neon-vfpv4"
 CONFIG_LINUX_4_9=y
-CONFIG_DEFAULT_ath10k-firmware-qca988x=y
-CONFIG_DEFAULT_ath10k-firmware-qca9984=y
-CONFIG_DEFAULT_ath10k-firmware-qca99x0=y
 CONFIG_DEFAULT_base-files=y
 CONFIG_DEFAULT_busybox=y
 CONFIG_DEFAULT_dnsmasq=y
@@ -78,6 +76,7 @@ CONFIG_DEFAULT_dropbear=y
 CONFIG_DEFAULT_firewall=y
 CONFIG_DEFAULT_fstools=y
 CONFIG_DEFAULT_ip6tables=y
+CONFIG_DEFAULT_ipq-wifi-rt-ac58u=y
 CONFIG_DEFAULT_iptables=y
 CONFIG_DEFAULT_iwinfo=y
 CONFIG_DEFAULT_kmod-ata-ahci=y
@@ -91,6 +90,7 @@ CONFIG_DEFAULT_kmod-usb-dwc3-of-simple=y
 CONFIG_DEFAULT_kmod-usb-ledtrig-usbport=y
 CONFIG_DEFAULT_kmod-usb-ohci=y
 CONFIG_DEFAULT_kmod-usb-phy-qcom-dwc3=y
+CONFIG_DEFAULT_kmod-usb-phy-qcom-ipq4019=y
 CONFIG_DEFAULT_kmod-usb2=y
 CONFIG_DEFAULT_kmod-usb3=y
 CONFIG_DEFAULT_libc=y
